name:                cncmix
version:             0.3.0.0
synopsis:            Library & command-line tool to manipulate Command & Conquer Mix Archives
homepage:            https://github.com/Ericson2314/cncmix
license:             GPL-3
license-file:        LICENSE
author:              John Ericson
maintainer:          Ericson2314@Yahoo.com
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

flag executable
  Description:       Build the command line tool in addition to the library.
  Default:           False

library
  exposed-modules:   Main, Codec.Archive.CnCMix, Codec.Archive.CnCMix.Backend, Codec.Archive.CnCMix.LocalMixDatabase,
                     Codec.Archive.CnCMix.TiberianDawn,
                     Codec.Archive.CnCMix.RedAlert.Normal, Codec.Archive.CnCMix.RedAlert.Checksummed, Codec.Archive.CnCMix.RedAlert.Encrypted
  build-depends:     base ==4.5.*, containers ==0.4.*, filepath ==1.3.*, directory ==1.1.*, cmdlib ==0.3.*, bytestring ==0.9.*, binary ==0.5.*, QuickCheck ==2.4.*, HTF == 0.10.*

executable cncmix
  if flag(executable)
    Buildable:       True
  else
    Buildable:       False
  main-is:           Main.hs
  build-depends:     base ==4.5.*, containers ==0.4.*, filepath ==1.3.*, directory ==1.1.*, cmdlib ==0.3.*, bytestring ==0.9.*, binary ==0.5.*, QuickCheck ==2.4.*, HTF == 0.10.*

test-suite sample-tests
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  other-modules:     Main, Codec.Archive.CnCMix, Codec.Archive.CnCMix.Backend, Codec.Archive.CnCMix.LocalMixDatabase,
                     Codec.Archive.CnCMix.TiberianDawn,
                     Codec.Archive.CnCMix.RedAlert.Normal, Codec.Archive.CnCMix.RedAlert.Checksummed, Codec.Archive.CnCMix.RedAlert.Encrypted
  build-depends:     base ==4.5.*, containers ==0.4.*, filepath ==1.3.*, directory ==1.1.*, cmdlib ==0.3.*, bytestring ==0.9.*, binary ==0.5.*, QuickCheck ==2.4.*, HTF == 0.10.*
